data/all_generated_tests/raw_wast_tests/block_TypeMismatchinControlFlowInstructions_2574.wast
;; 5. **Test Description**:    Create a `block` meant to produce an `i32` but inject a `br_if` that pushes an `i64` back onto the stack. Check if implementations can detect and correct type discrepancies before block ends.    **Constraint**: Conditional branches must maintain the block's type.    **Relation**: Verifies type consistency upon conditional branching.

(assert_invalid
  (module (func $type-mismatch-br_if-i32-i64 (result i32)
    (block (result i32) (i64.const 42) (br_if 0 (i32.const 1)))
  ))
  "type mismatch"
)